[package]
name = "compiler"
version = "0.1.0"
authors = ["gabivlj <gabitriqui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"



[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"